reuse terraform plan file for apply's, re-arch for file uploads+downloads
