# api/v1/client/swagger/api/swagger.yaml
@@ -2663,6 +2663,105 @@ paths:
           \n\tfmt.Println(res)\n\tfmt.Println(string(body))\n\n}"
       x-codegen-request-body-name: CreateModuleRequest
   /api/v1/teams/{team_id}/modules/{module_id}/runs:
+    get:
+      tags:
+      - Modules
+      summary: List Module Runs
+      description: Lists module runs for a given module id.
+      operationId: listModuleRuns
+      parameters:
+      - name: team_id
+        in: query
+        description: The page to query for
+        required: false
+        style: form
+        explode: true
+        schema:
+          type: integer
+          format: int64
+          x-go-name: Page
+        x-go-name: Page
+      - name: module_id
+        in: query
+        description: the status of the module run
+        required: false
+        style: form
+        explode: true
+        schema:
+          type: string
+          x-go-name: Status
+        x-go-name: Status
+      responses:
+        "200":
+          description: Successfully listed the module runs
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ListModuleRunsResponse'
+        "400":
+          description: A malformed or bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/APIErrorBadRequestExample'
+        "403":
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/APIErrorForbiddenExample'
+      x-codeSamples:
+      - lang: Shell
+        source: |-
+          curl --request GET \
+            --url 'http://localhost:8080/api/v1/teams/{team_id}/modules/{module_id}/runs?team_id=2&module_id=SOME_STRING_VALUE' \
+            --header 'Authorization: Bearer REPLACE_BEARER_TOKEN'
+      - lang: Node
+        source: |-
+          const fetch = require('node-fetch');
+
+          let url = 'http://localhost:8080/api/v1/teams/{team_id}/modules/{module_id}/runs?team_id=2&module_id=SOME_STRING_VALUE';
+
+          let options = {method: 'GET', headers: {Authorization: 'Bearer REPLACE_BEARER_TOKEN'}};
+
+          fetch(url, options)
+            .then(res => res.json())
+            .then(json => console.log(json))
+            .catch(err => console.error('error:' + err));
+      - lang: Ruby
+        source: |-
+          require 'uri'
+          require 'net/http'
+
+          url = URI("http://localhost:8080/api/v1/teams/{team_id}/modules/{module_id}/runs?team_id=2&module_id=SOME_STRING_VALUE")
+
+          http = Net::HTTP.new(url.host, url.port)
+
+          request = Net::HTTP::Get.new(url)
+          request["Authorization"] = 'Bearer REPLACE_BEARER_TOKEN'
+
+          response = http.request(request)
+          puts response.read_body
+      - lang: Python
+        source: |-
+          import requests
+
+          url = "http://localhost:8080/api/v1/teams/{team_id}/modules/{module_id}/runs"
+
+          querystring = {"team_id":"2","module_id":"SOME_STRING_VALUE"}
+
+          headers = {"Authorization": "Bearer REPLACE_BEARER_TOKEN"}
+
+          response = requests.request("GET", url, headers=headers, params=querystring)
+
+          print(response.text)
+      - lang: Go
+        source: "package main\n\nimport (\n\t\"fmt\"\n\t\"net/http\"\n\t\"io/ioutil\"\
+          \n)\n\nfunc main() {\n\n\turl := \"http://localhost:8080/api/v1/teams/{team_id}/modules/{module_id}/runs?team_id=2&module_id=SOME_STRING_VALUE\"\
+          \n\n\treq, _ := http.NewRequest(\"GET\", url, nil)\n\n\treq.Header.Add(\"\
+          Authorization\", \"Bearer REPLACE_BEARER_TOKEN\")\n\n\tres, _ := http.DefaultClient.Do(req)\n\
+          \n\tdefer res.Body.Close()\n\tbody, _ := ioutil.ReadAll(res.Body)\n\n\t\
+          fmt.Println(res)\n\tfmt.Println(string(body))\n\n}"
     post:
       tags:
       - Modules
@@ -2896,113 +2995,6 @@ paths:
           \n}"
       x-codegen-request-body-name: FinalizeModuleRunRequest
   /api/v1/teams/{team_id}/modules/{module_id}/runs/{module_run_id}/plan:
-    get:
-      tags:
-      - Modules
-      summary: Get Terraform plan
-      description: Creates a `GET` request for a Terraform plan. **Should only be
-        called by Terraform in automation.**
-      operationId: getTerraformPlan
-      parameters:
-      - name: team_id
-        in: path
-        description: The team id
-        required: true
-        style: simple
-        explode: false
-        schema:
-          type: string
-          x-go-name: Team
-        x-go-name: Team
-      - name: module_id
-        in: path
-        description: The module id
-        required: true
-        style: simple
-        explode: false
-        schema:
-          type: string
-          x-go-name: Module
-        x-go-name: Module
-      - name: module_run_id
-        in: path
-        description: The module run id
-        required: true
-        style: simple
-        explode: false
-        schema:
-          type: string
-          x-go-name: Run
-        x-go-name: Run
-      responses:
-        "200":
-          description: Successfully created the TF plan
-          content: {}
-        "400":
-          description: A malformed or bad request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/APIErrorBadRequestExample'
-        "403":
-          description: Forbidden
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/APIErrorForbiddenExample'
-        "423":
-          description: Locked
-          content: {}
-      x-codeSamples:
-      - lang: Shell
-        source: |-
-          curl --request GET \
-            --url http://localhost:8080/api/v1/teams/322346f9-54b4-497d-bc9a-c54b5aaa4400/modules/322346f9-54b4-497d-bc9a-c54b5aaa4400/runs/322346f9-54b4-497d-bc9a-c54b5aaa4400/plan \
-            --header 'Authorization: Bearer REPLACE_BEARER_TOKEN'
-      - lang: Node
-        source: |-
-          const fetch = require('node-fetch');
-
-          let url = 'http://localhost:8080/api/v1/teams/322346f9-54b4-497d-bc9a-c54b5aaa4400/modules/322346f9-54b4-497d-bc9a-c54b5aaa4400/runs/322346f9-54b4-497d-bc9a-c54b5aaa4400/plan';
-
-          let options = {method: 'GET', headers: {Authorization: 'Bearer REPLACE_BEARER_TOKEN'}};
-
-          fetch(url, options)
-            .then(res => res.json())
-            .then(json => console.log(json))
-            .catch(err => console.error('error:' + err));
-      - lang: Ruby
-        source: |-
-          require 'uri'
-          require 'net/http'
-
-          url = URI("http://localhost:8080/api/v1/teams/322346f9-54b4-497d-bc9a-c54b5aaa4400/modules/322346f9-54b4-497d-bc9a-c54b5aaa4400/runs/322346f9-54b4-497d-bc9a-c54b5aaa4400/plan")
-
-          http = Net::HTTP.new(url.host, url.port)
-
-          request = Net::HTTP::Get.new(url)
-          request["Authorization"] = 'Bearer REPLACE_BEARER_TOKEN'
-
-          response = http.request(request)
-          puts response.read_body
-      - lang: Python
-        source: |-
-          import requests
-
-          url = "http://localhost:8080/api/v1/teams/322346f9-54b4-497d-bc9a-c54b5aaa4400/modules/322346f9-54b4-497d-bc9a-c54b5aaa4400/runs/322346f9-54b4-497d-bc9a-c54b5aaa4400/plan"
-
-          headers = {"Authorization": "Bearer REPLACE_BEARER_TOKEN"}
-
-          response = requests.request("GET", url, headers=headers)
-
-          print(response.text)
-      - lang: Go
-        source: "package main\n\nimport (\n\t\"fmt\"\n\t\"net/http\"\n\t\"io/ioutil\"\
-          \n)\n\nfunc main() {\n\n\turl := \"http://localhost:8080/api/v1/teams/322346f9-54b4-497d-bc9a-c54b5aaa4400/modules/322346f9-54b4-497d-bc9a-c54b5aaa4400/runs/322346f9-54b4-497d-bc9a-c54b5aaa4400/plan\"\
-          \n\n\treq, _ := http.NewRequest(\"GET\", url, nil)\n\n\treq.Header.Add(\"\
-          Authorization\", \"Bearer REPLACE_BEARER_TOKEN\")\n\n\tres, _ := http.DefaultClient.Do(req)\n\
-          \n\tdefer res.Body.Close()\n\tbody, _ := ioutil.ReadAll(res.Body)\n\n\t\
-          fmt.Println(res)\n\tfmt.Println(string(body))\n\n}"
     post:
       tags:
       - Modules
@@ -5826,6 +5818,35 @@ components:
         $ref: '#/components/schemas/GithubRepo'
       x-go-package: github.com/hatchet-dev/hatchet/api/v1/types
       x-schema-name: ListGithubReposResponse
+    ListModuleRunsResponse:
+      type: object
+      properties:
+        pagination:
+          $ref: '#/components/schemas/PaginationResponse'
+        rows:
+          type: array
+          items:
+            $ref: '#/components/schemas/ModuleRun'
+          x-go-name: Rows
+      example:
+        pagination:
+          next_page: 3
+          num_pages: 10
+          current_page: 2
+        rows:
+        - status_description: status_description
+          updated_at: 2022-12-13T15:06:48.888358-05:00
+          kind: kind
+          created_at: 2022-12-13T15:06:48.888358-05:00
+          id: bb214807-246e-43a5-a25d-41761d1cff9e
+          status: status
+        - status_description: status_description
+          updated_at: 2022-12-13T15:06:48.888358-05:00
+          kind: kind
+          created_at: 2022-12-13T15:06:48.888358-05:00
+          id: bb214807-246e-43a5-a25d-41761d1cff9e
+          status: status
+      x-go-package: github.com/hatchet-dev/hatchet/api/v1/types
     ListModulesResponse:
       type: object
       properties:
